# quarry

./: .eslintrc.json  .gitattributes  .gitignore  Dockerfile  Pipfile  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  provision.bash  pyproject.toml  quarry.wsgi  requirements.txt  schema.sql  secrets.sh  test-requirements.txt  tox.ini
.github/workflows/: blubber.yaml  build-and-push.yaml  irc-notification.yaml  lint.yaml  linter.yaml  notification.yaml  tests.yaml  update-container-tags.yaml
ansible/: quarry.yaml
ansible/files/: csi-secret-cinderplugin.yaml.crypt
docker-replica/: Dockerfile  replica.sql
helm-quarry/: Chart.yaml  dev-config.yaml  dev-env.yaml  dev_config.yaml  prod-config.yaml  prod-env.yaml  prod_config.yaml  values.yaml
helm-quarry/templates/: NOTES.txt  config_yaml.yaml  db_deployment.yaml  db_schema_cm.yaml  db_service.yaml  mywiki_deployment.yaml  mywiki_service.yaml  redis_deployment.yaml  redis_exporter_service.yaml  redis_service.yaml  redis_statefulset.yaml  results_pv.yaml  results_pvc.yaml  web_deployment.yaml  web_ingress.yaml  web_service.yaml  worker_deployment.yaml
old-blubber-tests/: test_query.py  test_results.py  test_valid_dbname.py
quarry/: config-prod.yaml  default_config.yaml
quarry/web/: api.py  app.py  cli.py  config.py  connections.py  killer.py  metrics.py  output.py  query.py  redissession.py  replica.py  results.py  run.py  webhelpers.py  worker.py
scripts/: print_db_schema.py
terraform/: 123.tf  main.tf  secrets.tf  vars.tf
tests/: conftest.py  test_api.py  test_app.py  test_login.py  test_output.py  test_query.py  test_results.py  test_user.py  test_worker.py
tests/tox/: Dockerfile
tofu/: 123.tf  124.tf  126a.tf  127a.tf  127b.tf  db.tf  main.tf  secrets.tf  vars.tf
(+18 files in other folders)
