[tool.black]
line-length = 80
target_version = ['py311']

[tool.poetry]
name = "quarry"
version = "0.1.0"
description = "Quarry web application for running SQL queries."
authors = ["Vanshika <vanshikaa.1105@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "1.1.4"
jinja2 = "2.11.3"
werkzeug = "0.16.0"
itsdangerous = "1.1.0"
click = "7.1.2"
gunicorn = "21.2.0"
markupsafe = "2.0.1"
pymysql = "1.0.2"
redis = "3.5.3"
sqlalchemy = "1.4.22"
flask-caching = "2.0.2"
celery = "5.1.2"
kombu = "5.1.0"
billiard = "3.6.4.0"
vine = "5.0.0"
mwoauth = "0.3.7"
oauthlib = "3.1.1"
pyjwt = "1.7.1"
requests-oauthlib = "1.3.0"
requests = "2.26.0"
urllib3 = "1.26.6"
certifi = "2021.5.30"
charset-normalizer = "2.0.4"
idna = "3.2"
pysocks = "1.7.1"
prometheus-client = "0.12.0"
prometheus-flask-exporter = "0.18.7"
pytz = "2021.1"
pyyaml = "6.0.2"
six = "1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
